membuat website portfolio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		<nav>
 			<div class="navbar-logo"><a href="#home">myportfolio</a></div>
 			<div class="navbar-list">
-				<a href="#all-project">All Project</a>
+				<a href="#all-project">Semua Proyek Saya</a>
+				<a href="#about">Tentang Saya</a>
 			</div>
 			<div class="search">
 				<div class="searches">
@@ -38,8 +39,9 @@
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 				<a href="#" class="cta"></a>
 			</div>
-			<div class="row-img">
-				<img src="img/hero.jpg" alt="Project">
+			<div class="profile">
+				<a href="#"><i data-feather="github"></i></a>
+				<a href="#"><i data-feather="linkedin"></i></a>
 			</div>
 		</div>
 	</header>
@@ -53,22 +55,22 @@
 		<div class="row">
 			<div class="about-card">
 				<div class="card-img-satu"></div>
-				<a href="#" class="card-caption">Education</a>
+				<a href="#" class="card-caption satu">Pendidikan</a>
 			</div>
 
 			<div class="about-card">
 				<div class="card-img-dua"></div>
-				<a href="#" class="card-caption">Journey</a>
+				<a href="#" class="card-caption dua">Perjalanan</a>
 			</div>
 
 			<div class="about-card">
 				<div class="card-img-tiga"></div>
-				<a href="#" class="card-caption">Hobby</a>
+				<a href="#" class="card-caption tiga">Hobi</a>
 			</div>
 
 			<div class="about-card">
 				<div class="card-img-empat"></div>
-				<a href="#" class="card-caption">Experience</a>
+				<a href="#" class="card-caption empat">Pengalaman</a>
 			</div>
 		</div>
 	</section>
@@ -76,7 +78,7 @@
 
 	<!-- All project section start -->
 	<section id="all-project" class="all-project">
-		<h3>Semua <span>Project</span> Saya</h2>
+		<h3>Semua <span>Proyek</span> Saya</h2>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas enim praesentium, eligendi fuga rem vitae.</p>
 		<div class="row">
 			<div class="project-card">
@@ -125,6 +127,62 @@
 		</div>
 	</footer>
 	<!-- Footer End -->
+
+	<!-- Modal section start -->
+	<div class="modal" id="item-modal-detail-satu">
+		<div class="modal-container">
+			<a href="#" class="close-icon-satu"><i data-feather="x"></i></a>
+			<div class="modal-about">
+				<img src="img/about-1.jpg" alt="my education">
+				<div class="about-content">
+					<h3>Riwayat Pendidikan</h3>
+					<p>MA Yasti Singkawang</p>
+					<p>STKIP Al Hikmah Surabaya 2020-sekarang</p>
+					<a href="#" class="about-product-detail">Selengkapnya</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal" id="item-modal-detail-dua">
+		<div class="modal-container">
+			<a href="#" class="close-icon-dua"><i data-feather="x"></i></a>
+			<div class="modal-about">
+				<img src="img/journey/journey.jpg" alt="my journey">
+				<div class="about-content">
+					<h3>Perjalanan</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad molestiae incidunt et!.</p>
+					<a href="#" class="about-product-detail">Selengkapnya</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal" id="item-modal-detail-tiga">
+		<div class="modal-container">
+			<a href="#" class="close-icon-tiga"><i data-feather="x"></i></a>
+			<div class="modal-about">
+				<img src="img/hobi/hobi.jpg" alt="my journey">
+				<div class="about-content">
+					<h3>Hobi Saya</h3>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident quia deserunt velit modi pariatur! Molestiae?</p>
+					<a href="#" class="about-product-detail">Selengkapnya</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal" id="item-modal-detail-empat">
+		<div class="modal-container">
+			<a href="#" class="close-icon-empat"><i data-feather="x"></i></a>
+			<div class="modal-about">
+				<img src="img/pengalaman/pengalaman.jpg" alt="my journey">
+				<div class="about-content">
+					<h3>Pengalaman</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, ut?</p>
+					<a href="#" class="about-product-detail">Selengkapnya</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Modal section start -->
 	<!-- feather icons -->
 	<script>
       feather.replace()
